--- a/css/palestras.css
+++ b/css/palestras.css
@@ -13,3 +13,18 @@
     padding: 10px 0;
     border-bottom: 1px solid lightgray;
 }
+
+.card-palestrante {
+    padding: 10px;
+    margin-top: 5px;
+    margin-right: 5px;
+    border: 1px solid lightgray;
+    width: fit-content;
+    text-align: center;
+}
+
+.card-palestrante .nome {
+    margin-top: 10px;
+    padding-top: 5px;
+    border-top: 1px solid lightgray;
+}
