--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,3 +9,17 @@
 .footer p {
     font-size: 13px;
 }
+
+.titulo {
+    font-size: 20px;
+}
+
+.titulo span {
+    color: #0099ff;
+}
+
+.tags {
+    font-size: 20px;
+    color: #0033cc;
+    margin-bottom: 0.7rem;
+}
