--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,6 +24,10 @@
     color: #0099ff;
 }
 
+.container p {
+    margin: 0;
+}
+
 .tags {
     font-size: 20px;
     color: #0099ff;
@@ -37,11 +41,6 @@
     font-weight: bold;
     /* margin-bottom: 0.7rem; */
 }
-
-.comissao p {
-    margin: 0;
-}
-
 
 /* @media (min-width: 1450px) {
 
