--- a/css/palestras.css
+++ b/css/palestras.css
@@ -13,6 +13,10 @@
     border-bottom: 1px solid lightgray;
 }
 
+.linha-principal {
+    cursor: pointer;
+}
+
 .card-palestrante {
     padding: 10px;
     margin-top: 5px;
