--- a/css/dados_salvos.css
+++ b/css/dados_salvos.css
@@ -1,7 +1,3 @@
-/* body {
-    background-color: #d9d9d9;
-} */
-
 .imagem {
     text-align: center;
 }
@@ -9,7 +5,7 @@
 .imagem p {
     font-size: 20px;
     color: #009933;
-    margin-bottom: 0.7rem;
+    margin: 1.5rem 0;
     font-weight: bold;
 }
 
